--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.15.3",
     "express-jwt": "^5.3.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
